@@ -39,10 +39,13 @@
                 <tal:def tal:define="fieldname string:assessment; 
                              fieldset string:default; ">
                     <metal:macro metal:use-macro="context/indicators_macros/macros/active_field">
-                        <metal:slot metal:fill-slot="content">
-              <a name="rfs_assessment_id" tal:attributes="name string:rfs_${fieldname}_${context/getId}"></a>
-                            <div tal:condition="python:not imsutils.field_has_value('assessment', context)" class="placeholder">
-                <span class="required" i18n:translate="">Please fill in</span>
+                        <metal:slot metal:fill-slot="content" 
+                                    tal:define="value_info python:imsutils.field_value_info('assessment', context)">
+                            <a name="rfs_assessment_id" tal:attributes="name string:rfs_${fieldname}_${context/getId}"></a>
+                            <div tal:condition="not: value_info/has_value" class="placeholder">
+                              <span class="required" i18n:translate="">
+                                Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                              </span>
                             </div>
                             <div tal:replace="structure context/assessment" />
                         </metal:slot>
