@@ -15,9 +15,13 @@
 				</h4>
 				<tal:def tal:define="fieldname string:management_plan; fieldset string:default">
 					<metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-						<metal:slot metal:fill-slot="content">
-							<div tal:condition="python:not imsutils.field_has_value(fieldname, context)"
-								class="placeholder">Please fill in</div>
+                          <metal:slot metal:fill-slot="content" 
+                                tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                            <div tal:condition="not: value_info/has_value" class="placeholder">
+                              <span class="required" i18n:translate="">
+                                Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                              </span>
+                            </div>
 							<a href=""
 								tal:attributes="href python:'http://applications/managementplan/ProjectPlan.aspx?year=%s&amp;code=%s' % context.getManagement_plan()"
 								tal:content="python:'%s %s' % context.getManagement_plan()">2009</a> 
