@@ -17,10 +17,12 @@
               <tal:block i18n:translate="">Definition</tal:block>
             </h4>
             <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-              <metal:slot metal:fill-slot="content">
-                <div tal:condition="python:not imsutils.field_has_value(fieldname, context)"
-                  class="placeholder">
-                  <span class="required" i18n:translate="">Please fill in</span>
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span class="required" i18n:translate="">
+                      Please fill in. <span tal:replace="value_info/msg" i18n:name="msg"/>
+                  </span>
                 </div>
                 <p tal:replace="structure context/getDefinition"></p>
               </metal:slot>
@@ -40,10 +42,12 @@
           </h4>
           <tal:def tal:define="fieldname string:units; fieldset string:default">
             <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-              <metal:slot metal:fill-slot="content">
-                <div tal:condition="python:not imsutils.field_has_value(fieldname, context)"
-                  class="placeholder">
-                  <span class="required" i18n:translate="">Please fill in</span>
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span class="required" i18n:translate="">
+                      Please fill in. <span tal:replace="value_info/msg" i18n:name="msg"/>
+                  </span>
                 </div>
                 <p tal:replace="structure context/getUnits"></p>
               </metal:slot>
