@@ -18,10 +18,12 @@
           </h4>
           <tal:def tal:define="fieldname string:manager_user_id; fieldset string:default">
             <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-              <metal:slot metal:fill-slot="content">
-                <div tal:condition="python:not imsutils.field_has_value(fieldname, context)"
-                  class="placeholder">
-                  <span class="required" i18n:translate="">Please fill in</span>
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span class="required" i18n:translate="">
+                    Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                  </span>
                 </div>
                 <p tal:replace="structure context/getManager_user_id"></p>
                 <tal:contact define="manager_id context/getManager_user_id">
