@@ -18,10 +18,12 @@
           </h4>
           <tal:def tal:define="fieldname string:methodology_uncertainty; fieldset string:Methodology">
             <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-              <metal:slot metal:fill-slot="content">
-                <div tal:condition="python:not imsutils.field_has_value('methodology_uncertainty', context)"
-                  class="placeholder" i18n:translate="">
-                  Please fill in
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span class="required" i18n:translate="">
+                    Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                  </span>
                 </div>
                 <p tal:replace="structure context/getMethodology_uncertainty"></p>
               </metal:slot>
@@ -40,10 +42,12 @@
           </h4>
           <tal:def tal:define="fieldname string:data_uncertainty; fieldset string:DataSpecs">
             <metal:macro metal:use-macro="here/indicators_macros/macros/active_field">
-              <metal:slot metal:fill-slot="content">
-                <div tal:condition="python:not imsutils.field_has_value('data_uncertainty', context)"
-                  class="placeholder" i18n:translate="">
-                  Please fill in
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span i18n:translate="">
+                    Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                  </span>
                 </div>
                 <p tal:replace="structure context/getData_uncertainty"></p>
               </metal:slot>
